# funcnodes_module

./: .gitignore  .pre-commit-config.yaml  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  pytest.ini
.github/actions/install_package/: action.yml
.github/actions/updates_version/: action.yml
.github/workflows/: auto-pr-test-to-dev.yml  funcnodes_module_wf.yaml  main_update_version.yml  py_test.yml  register_plugin.yml  test.yml  version_publish_main.yml
.github/workflows/actions/cache_py/: cache_py.yml
.github/workflows/actions/install_package/: action.yml
.github/workflows/actions/updates_version/: action.yml
actions/updates_version/: action.yml
funcnodes_module/: __main__.py  config.py  new.py  register.py  update.py
funcnodes_module/template_folder/: pyproject.toml
funcnodes_module/template_folder/react_plugin/: package.json
funcnodes_module/template_folder/tests/: all_nodes_test_base.py  test_all_nodes.py
src/funcnodes_module/: __main__.py  config.py  update.py
src/funcnodes_module/template_folder/: pyproject.toml
src/funcnodes_module/template_folder/tests/: all_nodes_test_base.py
tests/: __init__.py  test_mod.py
tests/testmod/: __init__.py  pyproject.toml
tests/testmod/testmod/: __init__.py
tests/testmod/tests/: all_nodes_test_base.py  test_all_nodes.py  test_dummy.py  test_update.py
tests/testmod_dir/: pyproject.toml
tests/testmod_dir/tests/: all_nodes_test_base.py  test_all_nodes.py  test_dummy.py  test_update.py
tests_outer/: test_module.py
tests_outer/test-mod/: pyproject.toml
workflows/: funcnodes_module_wf.yaml
(+2 files in other folders)
