[tool.poetry]
name = "testmod"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
funcnodes = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
funcnodes-module = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."funcnodes.module"]
module = "testmod"
shelf = "testmod:NODE_SHELF"
