[project]
name = "testmod"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "funcnodes",
    ]


[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
]


[project.entry-points."funcnodes.module"]
module = "testmod"
shelf = "testmod:NODE_SHELF"
